tests/unit/language/errors/stack_overflow.arche
// RUN: %arche build -o %t %s && %t
// `recurse` writes the global `sink`, so it's a `proc` (an action) — a func may not touch a static.
// The base case lets LLVM see a path on which the call returns, so the post-call store to `sink`
// is reachable code with an observable side effect (a global the signal handler can see), which
// prevents the optimizer from turning recursion into a loop. The runtime SIGSEGVs long before the
// base case; the stack_check.c handler prints "stack overflow\n" and exits 0.
sink: [1]char;

recurse :: proc(depth: int)(r: int) {
  if (depth > 100000000) {
    r = depth;
  }
  else {
    recurse(depth + 1)(inner:);
    sink[0] = inner;
    r       = inner;
  }
}

main :: proc() {
  recurse(0)(top:);
}
